# Cam-road

./: .gitignore  __main__.py  config.json  data_classes.py  main.py  serial_tr.py  settingswidget.py  settingswidget.ui  sftp-server  telemetrywidget.ui  ui.py  ui_main.py  watcher.py  workwidget.py  workwidget.ui
help/: cam-road.desktop  interfaces  rc.local  requirements.txt
host/: CMakeLists.txt  __main__.py  data_classes.py  data_parser.py  global_.py  globals.py  host.pro  open_host_files.sh  run.sh  settingswidget.ui  sudo  telemetrywidget.py  ui.py  watcher.py  window.py  workwidget.py
host/images/: images.qrc
host/qml/: AccelerationControl.qml  BatteryProgress.qml  ConnectionLevel.qml  CustomCheckBox.qml  CustomRadioButton.qml  CustomSlider.qml  PositionControl.qml  SpeedControl.qml  main.qml  qml.qrc
host/road/: __main__.py  global_.py
host/source/: __main__.py  cam-road.desktop  global_.py  mbee_.py  radio_off.sh  radio_on.sh  run.sh  serialstar.py  settingswidget.py  telemetrywidget.py  watcher.py  window.py  workwidget.py
host/source/lib/: controls.py  data_classes.py  data_parser.py
host/source/ui/: settings.json  settingswidget.py  settingswidget.ui  telemetrywidget.py  telemetrywidget.ui  ui.py  ui_to_py.sh  window.py  window.ui  workwidget.py  workwidget.ui
host/src/: main.cpp
road/: __main__.py  data_classes.py  global_.py  globals.py  open_road_files.sh  watcher.py
road/lib/: data_parser.py  motor_controller.py
road/source/: __main__.py  global_.py  mbee_.py  run.sh  serialstar.py  watcher.py
road/source/lib/: data_classes.py  (+7 more)
